--- a/app/elements/botomo-search.html
+++ b/app/elements/botomo-search.html
@@ -96,7 +96,13 @@
        * 
        */
       _handleRequestResponse: function(e) {
-        this.fire("search-response", e.detail);
+        // send data to app component
+        this.fire("search-response", {
+          books: e.detail.detail.response, 
+          searchterm: this.$.txtSearchRequest.value
+        });
+        // clear search input
+        this.$.txtSearchRequest.value = "";
       }
     });
   </script>
