--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-image/iron-image.html">
 
 <!-- paper elements -->
 <link rel="import" href="../bower_components/paper-styles/color.html">
@@ -21,5 +22,7 @@
 <link rel="import" href="botomo-data.html">
 <link rel="import" href="botomo-search.html">
 <link rel="import" href="botomo-list.html">
+<link rel="import" href="botomo-list-item-styling.html">
 <link rel="import" href="botomo-list-item.html">
+<link rel="import" href="botomo-list-item-goodreads.html">
 <link rel="import" href="botomo-add.html">
