--- a/app/elements/botomo-list-item-goodreads.html
+++ b/app/elements/botomo-list-item-goodreads.html
@@ -1,21 +1,25 @@
 <dom-module id="botomo-list-item-goodreads">
   <template>
     <style include="botomo-list-item-styling">
-      .item--centering__horizontal {
-        @apply(--layout-horizontal);
-        @apply(--layout-center-justified);
+      .item--centering__margin {
         margin-bottom: 20px;
       }
       .item__right--row {
         @apply(--layout-horizontal);
         @apply(--layout-center);
       }
-      .item__right--button__title--margin {
-        margin-left: 30px;
+
+      .item__right--title:hover,
+      .item__right--text:hover {
+        font-weight: 600;
+        cursor: pointer;
       }
-      .item__right--button__rest--margin {
-        margin-top: -10px;
-        margin-left: 30px;
+      
+      .item__right--tooltip {
+        --paper-tooltip: {
+          width: 120px;
+          text-align: center;
+        }
       }
     </style>
 
@@ -37,35 +41,23 @@
         </iron-image>
       </div>
       <div class="item__right">
-        <div class="item--centering__horizontal">
-          <div class="item__right--title">
+        <div class="item--centering item--centering__margin">
+          <div class="item__right--title" on-tap="_sendTitleToAdd">
             [[item.title]]
           </div>
-          <paper-icon-button
-            class="item__right--button__title--margin"
-            icon="assignment-return"
-            on-tap="_sendTitleToAdd">
-          </paper-icon-button>
+          <paper-tooltip class="item__right--tooltip" position="right">Add Title to new Book!</paper-tooltip>
         </div>
         <div class="item__right--row">
-          <div class="item__right--text item__right--text--padding">
+          <div class="item__right--text item__right--text--padding" on-tap="_sendAuthorToAdd">
             written by [[item.author]]
           </div>
-          <paper-icon-button
-            class="item__right--button__rest--margin"
-            icon="assignment-return"
-            on-tap="_sendAuthorToAdd">
-          </paper-icon-button>
+          <paper-tooltip class="item__right--tooltip" position="right">Add Author to new Book!</paper-tooltip>
         </div>
         <div class="item__right--row">
-          <div class="item__right--text">
+          <div class="item__right--text" on-tap="_sendYearToAdd">
             published in [[item.year]]
           </div>
-          <paper-icon-button
-            class="item__right--button__rest--margin"
-            icon="assignment-return"
-            on-tap="_sendYearToAdd">
-          </paper-icon-button>
+          <paper-tooltip class="item__right--tooltip" position="right">Add Year to new Book!</paper-tooltip>
         </div>
       </div>
     </paper-material>
@@ -94,7 +86,6 @@
        * 
        */
       _sendTitleToAdd: function() {
-        console.log("Todo", this.item.title);
         this.fire("add-title-from-goodreads", this.item.title);
       },
 
@@ -102,7 +93,6 @@
        * 
        */
       _sendAuthorToAdd: function() {
-        console.log("Todo", this.item.author);
         this.fire("add-author-from-goodreads", this.item.author);
       },
 
@@ -110,7 +100,6 @@
        * 
        */
       _sendYearToAdd: function() {
-        console.log("Todo", this.item.year);
         this.fire("add-year-from-goodreads", this.item.year);
       },
       /**
