--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -16,6 +16,7 @@
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 
 <!-- own elements -->
 <link rel="import" href="botomo-app.html">
