9 - search all books on empty input

--- a/app/elements/botomo-data.html
+++ b/app/elements/botomo-data.html
@@ -46,7 +46,7 @@
             this.fire("request-failed", {msg: "No URL Parameter available!"});
           }
         } else {
-          this.fire("request-failed", {msg: "No Options Menu available!"});
+          this.fire("request-failed", {msg: "No Options available!"});
         }
       },
 
