--- a/app/elements/botomo-search.html
+++ b/app/elements/botomo-search.html
@@ -88,7 +88,7 @@
             this.$.bdRequester.request(options);
           }
         } else {
-          this.fire("request-failed", {msg: "No Search term available!"});
+          this.fire("search-all");
         }
       },
 
