--- a/app/elements/botomo-data.html
+++ b/app/elements/botomo-data.html
@@ -3,6 +3,7 @@
     <iron-ajax
       id="iaDataRequester"
       handle-as="json"
+      with-credentials="true"
       on-response="_handleResponse"
       on-error="_handleError">
     </iron-ajax>
